THREESCALE-9884 - Add support for OAuth2/OIDC in the OpenAPI CRD
